
--Fixed so that we force a girl baby if a family has no girl children currently
  (in addition to the case where they have < 4 fertile/potential-fertile
  females).  Fixes #991

--Polylingual race now has no homeland, and can give birth in any homeland
  band, though they must remain inside the bands (and still can't give birth in
  the outlands to the far north or south).




Version 399     2023-October-28

--Support for new GH message.

--Support for destroyed GH cause of death.

--Was depending on headIndex=-1 to detect person for headless/bodyless check,
  but getHeadIndex never returns -1.  Check if object is a person instead.




Server Fixes:

--Fixed bug that wasn't actually setting cursed status of players that were
  sent to Donkeytown.  This was causing all kinds of issues (non-Donkeytown
  players could be born to them as mothers, they were being pointed toward as
  experts, etc.)  This was apparently covered up for a long time while birth
  cooldowns were mistakenly set to zero.  Related to #967

--Support for new GH message and sending associated emote.

--Support for GH destroy phrases.





Version 397    2023-October-20

--Fixed ambiguity in English.txt file with two orderCommand values defined.
  Fixes #950

--Gesture maintained when flipping left/right due to mouse movement.
  Part of #953

--Fixed so that gestures from players don't overwrite each other (which was
  causing a player's gestures to switch randomly as other players gesture on
  the same sever).  Fixes #953





Editor Fixes:

--Pickers now show 4 lines of text per item until mouse-over, when text of
  moused item is expanded.  No more overlapping text in pickers, for items
  with long descriptions.

--Description field in Object Editor automatically rewinds to start of field
  when a new object is loaded (it used to auto-position at the end of the text
  description).




Server Fixes:

--Fixed so that if you disconnect and re-join the game, you always rejoin an