@@ -3,3 +3,5 @@ rsync -avz -e ssh --progress ~/private_html/* jcr13@publicdata.onehouronelife.co
 
 rsync -avz -e ssh --progress ~/checkout/OneLife/server/foodLog_* jcr13@publicdata.onehouronelife.com:public_html/foodLogs
 
+rsync -avz -e ssh --progress ~/checkout/OneLife/server/foodLogDetail_* jcr13@publicdata.onehouronelife.com:public_html/foodLogDetails
+
